<resources>
    <string name="app_name">ProdLine Classifier</string>
    <string name="btn_start">RESUME</string>
    <string name="btn_stop">STOP</string>
    <string name="btn_log">Process Log</string>
    <string name="btn_settings">Settings</string>
    <string name="txt_view_status">Init</string>
    <string name="readable_btn_settings">Back to menu</string>
    <string name="color_sysstat_idle">#C9E9FC</string>
    <string name="color_sysstat_running">#08F26E</string>
    <string name="color_sysstat_manually_stopped">#FFFF00</string>
    <string name="color_sysstat_emergency_stopped">#FF0000</string>
    <string name="color_sysstat_undefined">#D3D3D3</string>
    <string name="info_sysstat_start_main">ST_IDLE</string>
    <string name="info_sysstat_stop_main">ST_MANUAL_STOP</string>
    <string name="info_sysstat_unexpected_error">Unexpected Error</string>
    <string name="hint_user">Adafruit User</string>
    <string name="hint_AIO_key">AIO key</string>
    <string name="connect_to_adafruit_io">Connect to Adafruit IO</string>
    <string name="connect">Connect</string>
    <string name="log_out">Log out</string>
</resources>