<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343A47"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#F2ECECFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/btn_start_main"
        android:layout_width="112dp"
        android:layout_height="61dp"
        android:backgroundTint="#F2ECECFF"
        android:text="@string/btn_start"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553" />

    <Button
        android:id="@+id/btn_stop_main"
        android:layout_width="112dp"
        android:layout_height="61dp"
        android:backgroundTint="#F2ECECFF"
        android:text="@string/btn_stop"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553" />

    <Button
        android:id="@+id/btn_process_log_main"
        android:layout_width="158dp"
        android:layout_height="63dp"
        android:backgroundTint="#F2ECECFF"
        android:text="@string/btn_log"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textColorLink="#BBDEFB"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <Button
        android:id="@+id/btn_settings_main"
        android:layout_width="158dp"
        android:layout_height="63dp"
        android:backgroundTint="#F2ECECFF"
        android:text="@string/btn_settings"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/txt_view_systemstatus_main"
        android:layout_width="238dp"
        android:layout_height="129dp"
        android:background="@drawable/rounded_bg"
        android:gravity="center"
        android:text="@string/txt_view_status"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />

    <Button
        android:id="@+id/btn_log_out_main"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#F2ECECFF"
        android:text="@string/log_out"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>